force-app/main/default/objects/Biobanking_Multi_Product_Price__mdt/Biobanking_Multi_Product_Price__mdt.object-meta.xml
<CustomObject>
    <description>Stores the amount to charge when multiple biobanking services are purchased (outside of a bundle)</description>
    <label>Biobanking Multi-Product Price</label>
    <pluralLabel>Biobanking Multi-Product Prices</pluralLabel>
</CustomObject>