force-app/main/default/objects/Biobanking_Multi_Product_Price__mdt/fields/Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Count__c</fullName>
    <description>The number of biobanking products purchased</description>
    <label>Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>