force-app/main/default/objects/Biobanking_Multi_Product_Price__mdt/fields/Storage_Length__c.field-meta.xml
<CustomField>
    <fullName>Storage_Length__c</fullName>
    <label>Storage Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20YPP</fullName>
                <default>true</default>
                <label>20YPP</label>
            </value>
            <value>
                <fullName>LTS</fullName>
            </value>
            <value>
                <fullName>ASP</fullName>
                <label>Annual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>