force-app/main/default/objects/Biobanking_Multi_Product_Price__mdt/fields/Undiscounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Undiscounted_Price__c</fullName>
    <description>The current un-discounted price for a biobanking service (processing + storage)</description>
    <label>Undiscounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>