force-app/main/default/objects/Biobanking_Multi_Product_Price__mdt/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Price__c</columns>
    <columns>Product_Count__c</columns>
    <columns>Storage_Length__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detail</label>
</ListView>